Bug 366640 - fix setting of comp-lzo=no to correctly set comp-lzo=no-by-default
Summary: fix setting of comp-lzo=no to correctly set comp-lzo=no-by-default
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
: 372086 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-08-11 14:42 UTC by Thomas Haller
Modified: 2024-12-23 18:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Haller 2016-08-11 14:42:17 UTC
Related to bug 365816, plasma-nm should set "comp-lzo=no-by-default" instead of "comp-lzo=no".

Old versions of nm-openvpn and very new versions of nm-openvpn treat "comp-lzo=no" as if comp-lzo is not enabled at all. Only the 1.2.4 release treated comp-lzo=no that way, this however is now reverted again.

See https://bugzilla.gnome.org/show_bug.cgi?id=769177#c7 and https://git.gnome.org/browse/network-manager-openvpn/commit/?id=62bdd278d69cc396479af9d05a0b776d5ad386bf

Reproducible: Always
Comment 1 Jan Grulich 2016-08-17 13:06:23 UTC
Git commit 2503210a9b218f3787a517d7dc19e338d32e4240 by Jan Grulich.
Committed on 17/08/2016 at 12:43.
Pushed by grulich into branch 'master'.

Set correct value for comp-lzo property

M  +1    -1    vpn/openvpn/openvpnadvanced.ui
M  +2    -2    vpn/openvpn/openvpnadvancedwidget.cpp

http://commits.kde.org/plasma-nm/2503210a9b218f3787a517d7dc19e338d32e4240
Comment 2 Jan Grulich 2016-11-06 14:27:42 UTC
*** Bug 372086 has been marked as a duplicate of this bug. ***