Set correct value for comp-lzo property

BUG:366640